# upsclr-plugin-ncnn-vulkan

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
examples/: CMakeLists.txt
src/: main.cpp  main2.cpp  main_refactor.cpp  realesrgan.cpp  realesrgan.h  wic_image.h  win32dirent.h
src/engines/: base.cpp  base.hpp  check_result.hpp  encoding_utils.hpp  engine_factory.cpp  engine_factory.hpp
src/engines/realcugan/: realcugan.cpp  realcugan.hpp
src/engines/realesrgan/: realesrgan.cpp  realesrgan.hpp  realesrgan_refactor.cpp  realesrgan_refactor.hpp
src/plugin/: upsclr_plugin.cpp  upsclr_plugin.h
